# sklearn_tanimoto_gp

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
sklearn_tanimoto_gp/: __init__.py  kernels.py
tests/: test_kernels.py
